fixing contrast

--- a/style.css
+++ b/style.css
@@ -252,7 +252,7 @@ a:hover{
 }
 
 .after-wave {
-    background-image: linear-gradient(#017d7d80, #517C7C 20%, #3B5C5C, #424242 90%);
+    background-image: linear-gradient(#017d7d80, #517C7C 20%, #3B5C5C, #424242 80%);
 }
 
 /* originally #67b7b780 or .5 opacity
